# earthquake-detector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_app/alerts/: urls.py
django_app/alerts/migrations/: 0001_initial.py  0002_remove_alert_created_at_alert_detected_at.py
django_app/alerts/models/: __init__.py  alert_model.py
django_app/alerts/serializers/: __init__.py  alert_webhook_serializer.py
django_app/alerts/tests/: __init__.py  alert_model_test.py
django_app/alerts/views/: __init__.py  alert_webhook_view.py
django_app/earthquake_detector/: asgi.py  settings.py  urls.py  wsgi.py
django_app/subscribers/migrations/: 0001_initial.py  0002_subscriber_delete_subscribermodel.py  0003_alter_subscriber_contact.py
django_app/subscribers/models/: __init__.py  subscriber_model.py
django_app/subscribers/tests/: __init__.py  subscriber_model_test.py
django_app/telegram_bot/: apps.py  urls.py
django_app/telegram_bot/handlers/: __init__.py  noop_handler.py  start_handler.py  subscribe_handler.py
django_app/telegram_bot/management/commands/: runbot.py
django_app/telegram_bot/views/: __init__.py  telegram_webhook_view.py
scripts/: generate_token.py
